# trss

./: Cargo.toml  LICENSE  README.md  themes.json  trss_config.json
src/: app.rs  event.rs  main.rs
src/models/: db.rs  feed.rs  feed_item.rs  init.rs  mod.rs  settings.rs  theme.rs
src/screens/: home.rs  mod.rs  test_html.rs  view_feed.rs
src/utils/: mod.rs  parse_html.rs
src/widgets/: add_feed.rs  feed_list.rs  footer.rs  header.rs  mod.rs  sidebar.rs  theme_selector.rs
