[package]
name = "trss-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-sqlite = "0.5.2"
chrono = "0.4.41"
lazy_static = "1.5.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "serde"] }
reqwest = { version = "0.12.20", features = ["blocking"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.1", features = ["derive"] }
tl = "0.7.8"
tokio = { version = "1.45.1", features = ["tokio-macros", "macros", "rt", "net", "rt-multi-thread"] }
